// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container should render 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
     Hello world 
  </Text>
</View>
`;

exports[`Container should render with center children prop 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
     Hello world 
  </Text>
</View>
`;

exports[`Container should render with custom style props 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
     Hello world 
  </Text>
</View>
`;
